[package]
name = "embedded-various-fonts"
description = "Various fonts for use with the embedded-graphics crate."
version = "0.4.0"
authors = ["Wesley Moore <wes@wezm.net>", "Marc Poulhiès <dkm@kataplop.net>"]
edition = "2018"

documentation = "https://docs.rs/embedded-various-fonts"
repository = "https://github.com/dkm/embedded-various-fonts"

readme = "README.md"
license = "GPL, SIL, MIT"

keywords = ["bitmap", "monochrome", "font"]
categories = ["rendering", "embedded", "no-std"]

[dependencies]
embedded-graphics = "0.7"

font-kit = { version = "0.10", optional = true }
euclid = { version = "0.19", optional = true }
clap = { version = "2.33.3", optional = true }
image = { version = "0.20", optional = true, default-features = false, features = ["png_codec"] }
pathfinder_geometry = { version = "0.5.1", optional = true }

[features]
default = []
exe = ["font-kit", "euclid", "clap", "image", "pathfinder_geometry" ]
